# enviloup-videos-playground

./: .dockerignore  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
api/: Dockerfile  app.py
comments/: Dockerfile
docs/: base-system-design.excalidraw
frontend/: admin.html  index.html  watch.html
frontend/css/: base.css
frontend/js/: admin.js  base.js  index.js  utils.js  watch.js
nginx/: nginx.conf
nginx/certificates/: private-selfsigned.key  pub-selfsigned.crt
notifications/: Dockerfile
processing/: Dockerfile
recommendations/: Dockerfile  app.py
search/: Dockerfile
uploading/: Dockerfile
users/: Dockerfile
