[tool.poetry]
name = "enviloup-videos-playground"
version = "0.0.0"
description = "Enviloup Videos Playgroud"
authors = ["Konstantin Serezhkin <konstantin.serez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
